--- a/mon-projet/package.json
+++ b/mon-projet/package.json
@@ -6,19 +6,31 @@
     "start": "expo start",
     "android": "expo run:android",
     "ios": "expo run:ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@testing-library/react-native": "^13.2.0",
     "expo": "~52.0.37",
+    "expo-dev-client": "~5.0.12",
     "expo-status-bar": "~2.0.1",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.5",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "expo-dev-client": "~5.0.12"
+    "react-test-renderer": "18.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "jest": {
+  "preset": "jest-expo",
+  "transformIgnorePatterns": [
+    "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@sentry/react-native|native-base|react-native-svg)"
+  ]
+}
 }
