--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,10 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Run the typescript tests
+      - name: Run the unit tests
         uses: actions/setup-node@v4
         with:
           node-version: 20.10.0
-      - run: yarn install
-      - run: yarn test:type
-      - name: Run the linter
-        run: yarn test:lint
+      - run: cd mon-projet && npm install
+      - run: cd mon-projet && npm run test
       - run: echo "🍏 This job's status is ${{ job.status }}."
